# mars-manifest-tool

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  PROVENANCE.md  README.md  _tmp_iss_eclss.txt  pyproject.toml  scratch_bd.txt  scratch_nasa_lcc.txt  scratch_pdf.txt
.github/workflows/: tests.yml
data/: assumptions_seed.json  city_ramp_seed.yaml  component_catalog_seed.csv  requirements_seed.yaml
docs/: CITY_RAMP_RESEARCH.md  COMPARATIVES.md  CONOPS.md  CONSIDERED.md  HARDWARE.md  NARRATIVE.md  REQUIREMENTS.md  STORY.md  _city_ramp_raw_findings.json
docs/manifests/: README.md  SUMMARY.md  manifests.csv  manifests.json
examples/: campaign_4window.yaml  conservative_program.json  precursor_2026.yaml  precursor_2026_balanced.yaml  precursor_2026_redundant.yaml  program_plan.yaml
inputs/: README.md  assumptions.json  catalog.csv  city.json  considered.json  program.json  provenance.json  requirements.json
mars_manifest/: __init__.py  budgets.py  campaign.py  catalog.py  city.py  cli.py  edl.py  isru.py  ledgers.py  lifecycle.py  models.py  packing.py  power.py  report.py  requirements.py  scenarios.py  spares.py
tests/: conftest.py  test_budgets.py  test_campaign.py  test_city.py  test_edl.py  test_isru.py  test_ledgers.py  test_manifest_snapshot.py  test_packing.py  test_program_plan.py  test_requirements.py  test_scenarios.py  test_spares.py  test_whatif_overlay.py
viz/: README.md  build_scrolly.py  dashboard_data.json  export_dashboard_data.py  mars_manifest_story.html
